[gd_scene load_steps=5 format=2]

[ext_resource path="res://Art/TileMap.tres" type="TileSet" id=1]
[ext_resource path="res://Objects/Button.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="RectangleShape2D" id=2]

[node name="Button" type="StaticBody2D"]
position = Vector2( -8, -8 )
script = ExtResource( 2 )

[node name="ButtonArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ButtonArea"]
position = Vector2( 8, 8 )
shape = SubResource( 1 )

[node name="NotPressed" type="Sprite" parent="ButtonArea"]

[node name="TileMap" type="TileMap" parent="ButtonArea/NotPressed"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 5, 0 )

[node name="Pressed" type="Sprite" parent="ButtonArea"]

[node name="TileMap" type="TileMap" parent="ButtonArea/Pressed"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 5, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8, 8 )
shape = SubResource( 2 )
disabled = true

[connection signal="body_entered" from="ButtonArea" to="." method="_on_ButtonArea_body_entered"]
[connection signal="body_exited" from="ButtonArea" to="." method="_on_ButtonArea_body_exited"]
